# Mesh-Voxelization-OpenGL-Geometry-Shader

./: .gitignore  CMakeLists.txt  README.md
cmake/modules/: FindEigen3.cmake  FindGLEW.cmake  FindGLFW3.cmake  FindGLM.cmake
resources/: icosahedron.vox
src/: CameraHelper.h  MathKernels.h  OpenGLHelper.h  main.cpp
src/glsl/: PolygonFS.glsl  PolygonVS.glsl  VoxelizationFS.glsl  VoxelizationGS.glsl  VoxelizationVS.glsl
